@@ -5,6 +5,7 @@ New:
 
 * use Exception::Base ':all'.
 * Removed " foo at file line 123." string for caught standard die message.
+* Removed also the end of line (LF) for caught standard die message.
 
 Minor changes:
 
